resolved: medium and high level issues